--- a/argocd_init_app.yaml
+++ b/argocd_init_app.yaml
@@ -13,5 +13,5 @@ spec:
     repoURL: 'https://github.com/adonisgarciac/gitops-pull-mode.git'
     targetRevision: HEAD
   sources: []
-  project: default
+  project: acm
 ...
