--- a/appsets/global_appset.yaml
+++ b/appsets/global_appset.yaml
@@ -13,11 +13,13 @@ spec:
               labelSelector:
                 matchLabels:
                   cluster.open-cluster-management.io/placement: global-application-placement
+              requeueAfterSeconds: 180
           - git:
               repoURL: https://github.com/adonisgarciac/gitops-pull-mode.git
               revision: main
               directories:
               - path: push-mode/base/monitoring/
+              - path: push-mode/overlay/{{cluster}}/monitoring/
   template:
     metadata:
       name: '{{path.basename}}'
@@ -29,7 +31,6 @@ spec:
         path: '{{path}}'
       destination:
         server: '{{server}}'
-        namespace: openshift-monitoring
       syncPolicy:
         automated:
           selfHeal: false
