--- a/push-mode/overlay/gitops/monitoring/kustomization.yaml
+++ b/push-mode/overlay/gitops/monitoring/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 - ../../../base/monitoring/
-patchesStrategicMerge:
-- user_workload_monitoring_config.yaml
+patches:
+- user_workload_monitoring_config_patch.yaml
