--- a/appsets/global_appset.yaml
+++ b/appsets/global_appset.yaml
@@ -17,11 +17,11 @@ spec:
               repoURL: https://github.com/adonisgarciac/gitops-pull-mode.git
               revision: main
               directories:
-              - path: push-mode/overlay/{{cluster}}/monitoring
-              - path: push-mode/base/monitoring
+              - path: push-mode/monitoring/overlay/{{cluster}}
+              - path: push-mode/monitoring/base
   template:
     metadata:
-      name: '{{path.basename}}'
+      name: 'monitoring-{{path.basename}}'
     spec:
       project: acm
       source:
