--- a/push-mode/overlay/monitoring/gitops/kustomization.yaml
+++ b/push-mode/overlay/monitoring/gitops/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
-- ../../base
+- ../../../base/monitoring
 patches:
 - user_workload_monitoring_config_patch.yaml
