fake commit to update global_appset

--- a/appsets/global_appset.yaml
+++ b/appsets/global_appset.yaml
@@ -17,11 +17,11 @@ spec:
               repoURL: https://github.com/adonisgarciac/gitops-pull-mode.git
               revision: main
               directories:
-              - path: push-mode/monitoring/overlay/{{cluster}}
-              - path: push-mode/monitoring/base
+              - path: push-mode/overlay/{{cluster}}/monitoring
+              - path: push-mode/base/monitoring
   template:
     metadata:
-      name: 'monitoring-{{path.basename}}'
+      name: '{{path.basename}}-{{cluster}}'
     spec:
       project: acm
       source:
@@ -35,4 +35,5 @@ spec:
           selfHeal: false
           prune: false
         syncOptions: []
+
 ...
