--- a/push-mode/monitoring/overlay/gitops/user_workload_monitoring_config.yaml
+++ b/push-mode/monitoring/overlay/gitops/user_workload_monitoring_config.yaml
@@ -2,8 +2,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "5"
   name: user-workload-monitoring-config
   namespace: openshift-user-workload-monitoring
 data:
@@ -13,5 +11,11 @@ data:
         spec:
           resources:
             requests:
-              storage: 15Gi
+              storage: 10Gi
+    thanosRuler:
+      volumeClaimTemplate:
+        spec:
+          resources:
+            requests:
+              storage: 2Gi
 ...
