--- a/appsets/pull_global_appset.yaml
+++ b/appsets/pull_global_appset.yaml
@@ -5,6 +5,8 @@ metadata:
   name: pull-globalconfig-applicationset
   namespace: openshift-gitops
 spec:
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
   generators:
     - matrix:
         generators:
@@ -32,7 +34,12 @@ spec:
       source:
         repoURL: https://github.com/adonisgarciac/gitops-pull-mode.git
         targetRevision: main
-        path: '{{path}}'
+        path:  |
+         {{ - if .path.path }}
+           {{.path.path}}
+         {{ - else }}
+           {{index .path.segments 0}}/base
+         {{ - end }}
       destination:
         server: '{{server}}'
       syncPolicy:
