--- a/appsets/pull_global_appset.yaml
+++ b/appsets/pull_global_appset.yaml
@@ -19,16 +19,16 @@ spec:
               repoURL: https://github.com/adonisgarciac/gitops-pull-mode.git
               revision: main
               directories:
-              - path: helloworld/overlay/{{clusterName}}
+              - path: helloworld/overlay/{{.clusterName}}
   template:
     metadata:
       annotations:
-        apps.open-cluster-management.io/ocm-managed-cluster: '{{clusterName}}'
+        apps.open-cluster-management.io/ocm-managed-cluster: '{{.clusterName}}'
         apps.open-cluster-management.io/ocm-managed-cluster-app-namespace: openshift-gitops
         argocd.argoproj.io/skip-reconcile: "true"
       labels:
         apps.open-cluster-management.io/pull-to-ocm-managed-cluster: "true"
-      name: '{{clusterName}}-{{path[0]}}'
+      name: '{{.clusterName}}-{{index .path.segments 0}}'
     spec:
       project: acm
       source:
