--- a/argocd/argocd_init_app.yaml
+++ b/argocd/argocd_init_app.yaml
@@ -3,6 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: testing-gitops
+  namespace: openshift-gitops
 spec:
   destination:
     name: ''
