--- a/appsets/push_global_appset.yaml
+++ b/appsets/push_global_appset.yaml
@@ -5,8 +5,6 @@ metadata:
   name: push-globalconfig-applicationset
   namespace: openshift-gitops
 spec:
-  goTemplate: true
-  goTemplateOptions: ["missingkey=error"]
   generators:
     - matrix:
         generators:
@@ -19,23 +17,18 @@ spec:
               repoURL: https://github.com/adonisgarciac/gitops-pull-mode.git
               revision: main
               directories:
-              - path: monitoring/overlay/{{.clusterName}}
+              - path: monitoring/overlay/{{clusterName}}
   template:
     metadata:
-      name: '{{.clusterName}}-{{index .path.segments 0}}'
+      name: '{{clusterName}}-{{path[0]}}'
     spec:
       project: acm
       source:
         repoURL: https://github.com/adonisgarciac/gitops-pull-mode.git
         targetRevision: main
-        path:  |
-         {{ - if .path.path }}
-           {{.path.path}}
-         {{ - else }}
-           {{index .path.segments 0}}/base
-         {{ - end }}
+        path: '{{path}}'
       destination:
-        server: '{{.server}}'
+        server: '{{server}}'
       syncPolicy:
         automated:
           selfHeal: false
