--- a/helloworld-helm/templates/configMap.yaml
+++ b/helloworld-helm/templates/configMap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: the-map
+  name: the-map-helm
   namespace: hello-world
 data:
   altGreeting: "Good Morning!"
