--- a/argocd/argocd_acm_project_forbidden.yaml
+++ b/argocd/argocd_acm_project_forbidden.yaml
@@ -2,15 +2,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: acm
+  name: acm-forbidden
   namespace: openshift-gitops
 spec:
   clusterResourceWhitelist:
   - group: '*'
     kind: '*'
   destinations:
-  - namespace: 'hello-world'
-    server: 'https://kubernetes.default.svc'
+  - namespace: '*'
+    server: '*'
   sourceRepos:
   - '*'
 ...
