--- a/apps/monitoring_app.yaml
+++ b/apps/monitoring_app.yaml
@@ -1,9 +1,8 @@
 ---
 apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
+kind: Application
 metadata:
   name: local-cluster-monitoring
-  namespace: openshift-gitops
 spec:
   project: acm
   source:
