--- a/argocd/argocd_init_app.yaml
+++ b/argocd/argocd_init_app.yaml
@@ -3,11 +3,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: testing-gitops
-  namespace: openshift-gitops
 spec:
   destination:
     name: ''
-    namespace: openshift-gitops
+    namespace: hello-world
     server: 'https://kubernetes.default.svc'
   source:
     path: apps
