--- a/apps/helloworld_helm_forbidden.yaml
+++ b/apps/helloworld_helm_forbidden.yaml
@@ -3,6 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: push-globalconfig-applicationset-helm-forbidden
+  namespace: openshift-gitops
 spec:
   project: acm-forbidden
   source:
