--- a/apps/monitoring_app.yaml
+++ b/apps/monitoring_app.yaml
@@ -3,6 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: local-cluster-monitoring
+  namespace: openshift-gitops
 spec:
   project: acm
   source:
